layout tests added

--- a/apps/app/src/assets/layout.html
+++ b/apps/app/src/assets/layout.html
@@ -5,10 +5,119 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    Sample layout
+<body class="has-navbar-fixed-top has-navbar-fixed-bottom">
+    <nav class="navbar is-primary has-shadow is-fixed-top">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <img src="slow-motion-28.png">
+                </a>
+                <!-- <a class="navbar-item" href="/">
+                    Collection Roulette
+                </a> -->
+            </div>
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">item1</a>
+                    <a class="navbar-item">item2</a>
+                </div>
+                <div class="navbar-end">
+                    <a class="navbar-item">enditem1</a>
+                </div>
+            </div>
+        </nav>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+                <p>
+                    https://favicon.io/
+                </p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                sample content
+                <a href="https://www.flaticon.com/free-icons/slow-motion" title="slow-motion icons">Slow-motion icons created by Freepik - Flaticon</a>
+            </div>
+        </section>        
+        <nav class="navbar is-primary has-shadow is-fixed-bottom">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    Collection Roulette
+                </a>
+            </div>
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">item1</a>
+                    <a class="navbar-item">item2</a>
+                </div>
+                <div class="navbar-end">
+                    <a class="navbar-item">enditem1</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- <footer class="footer">
+        somecontent
+    </footer> -->
 </body>
 </html>
