works with live server and favicon

--- a/apps/app/src/assets/layout.html
+++ b/apps/app/src/assets/layout.html
@@ -13,7 +13,7 @@
     <nav class="navbar is-primary has-shadow is-fixed-top">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">
+                <a class="navbar-item" href="/apps/app/src/assets/layout.html">
                     <img src="slow-motion-28.png">
                 </a>
                 <!-- <a class="navbar-item" href="/">
