layout completed so far

--- a/test/layout.html
+++ b/test/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <script src="https://kit.fontawesome.com/f9d1e00815.js" crossorigin="anonymous"></script>
 </head>
 <body class="has-navbar-fixed-top">
     <nav class="navbar is-primary has-shadow is-fixed-top">
@@ -34,6 +35,49 @@
             </div>
         </div>
     </nav>
+
+    <div class="block">
+        <div class="container">
+            <figure class="image is-4160x6240">
+                <img src="./examples/ahmed-cXKlfOhuGNU-unsplash_2560.jpg">
+            </figure>
+        </div>
+    </div>
+
+    <!-- <div class="block">
+        <div class="container">
+            <figure class="image is-5255x3503">
+                <img src="./examples/marek-piwnicki-gPgS7gnavsA-unsplash_2560.jpg">
+            </figure>
+        </div>
+    </div>  -->
+
+    <div class="block">
+        <div class="container is-flex is-justify-content-center	">
+            <a class="button is-primary" href="./layout.html">
+                <span class="icon">
+                    <i class="fas fa-arrow-right"></i>
+                  </span>
+                <span>Next</span>
+            </a>
+        </div>
+    </div>
+
+    <div class="block">
+        <div class="container has-background-primary-light">
+            sample content
+        </div>
+    </div>
+    <div class="block">
+        <div class="container has-background-primary-light">
+            sample content
+        </div>
+    </div>
+    <div class="block">
+        <div class="container has-background-primary-light">
+            sample content
+        </div>
+    </div>
     <div class="block">
         <div class="container has-background-primary-light">
             sample content
